# fastapi-todo-app

./: .gitignore  Dockerfile  README.md  Taskfile.yml  compose.yml  pyproject.toml  requirements.txt  set_alias.sh
.devcontainer/: devcontainer.json  init.sh
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 31c4062c0665_create_todos_table.py
app/api/: todo.py
app/crud/: todo.py
app/db/: base.py  session.py
app/models/: todo.py
app/routers/: todo.py
app/schemas/: todo.py
backend/: alembic.ini  dev.db  main.py
backend/alembic/: env.py
backend/alembic/versions/: 44ac2ca47e44_add_todo_table.py
backend/api/: api.py
backend/crud/: todo.py
backend/db/: base.py  base_class.py  session.py
backend/ddd/application/: todo_application.py
backend/ddd/di/: factory.py
backend/ddd/infrastructure/: database.py
backend/models/: todo.py
backend/routers/: todo.py
backend/schemas/: todo.py
backend/tests/application/: test_todo_application.py
backend/tests/web/: test_todo_api.py
backend/web/: main.py
backend/web/apis/: todo.py
backend/web/schemas/: todo.py
docs/: usage.md
frontend/: README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.vue  interfaces.ts  main.ts
frontend/src/components/: AddTodo.vue  DoneList.vue  Footer.vue  Header.vue  Main.vue  TodoList.vue
frontend/src/stores/: todo.ts
initdb/: 1_initdb.sh  2_initTodo.sh
todo_app/: main.py
volumes/postgres/config/: my-postgres.conf
volumes/postgres/docker-entrypoint-initdb.d/: 1_initdb.sh
(+7 files in other folders)
